init.env update

--- a/init.env
+++ b/init.env
@@ -12,38 +12,33 @@ fi
 export APP_HOME=${DEV_HOME}/app
 if [ ! -d ${APP_HOME} ]; then
     npx create-react-app app
-fi
-
-export FB_HOME=${DEV_HOME}/.firebase
-if [ ! -d ${FB_HOME} ]; then
-    npm list -g | grep firebase-tools || sudo npm install -g firebase-tools
-    firebase login --reauth
-    mkdir ${FB_HOME}
-    cd ${FB_HOME}/ && firebase init
-    rm -rf ${FB_HOME}/public
-    ln -s ${DEV_HOME}/app/build ${FB_HOME}/public
+    echo 'SKIP_PREFLIGHT_CHECK=true' > ${APP_HOME}/.env
 fi
 
 if [ ! -f ${DEV_HOME}/.pkgs.installed ];then 
-    npm i --save react-router-dom
-    npm i --save react-mapbox-gl mapbox-gl
-    npm i --save react-bootstrap bootstrap
-    npm i --save react-favicon
-    npm i --save typeface-nanum-square-round
-    npm i --save firebase
-    npm i --save axios
-    npm i --save js-sha256
-    npm i --save react-hash-string
-    npm i --save react-copy-to-clipboard
-    npm i --save js-sha256
-    npm i --save latlon-geohash
-    npm i --save @giphy/react-components
-    npm i --save @giphy/js-fetch-api
+    npm install --save react-router-dom
+    npm install --save mapbox-gl
+    npm install --save latlon-geohash
+    npm install --save react-infinite-scroll-component
+    npm install --save js-sha256
+    npm install --save firebase-tools
+    npm install --save sass sass-loader
+    npm install --save firebase
     touch ${DEV_HOME}/.pkgs.installed
 fi
 
+if [ ! -d ${APP_HOME}/node_modules ]; then
+    cd ${APP_HOME} && npm install
+fi
+
+export FB_HOME=${DEV_HOME}/.firebase
+if [ ! -d ${FB_HOME} ];then
+    mkdir ${FB_HOME} && cd ${FB_HOME} && firebase login && firebase init hosting
+fi
+
 alias startup="cd ${APP_HOME} && npm start"
-alias deploy="cd ${APP_HOME} && npm run build && cd ${FB_HOME}/ && firebase deploy && cd -"
+alias deploy="cd ${APP_HOME} && npm run build && cd ${FB_HOME} && rm -rf ${FB_HOME}/public/* && mkdir -p ${FB_HOME}/public  && mv ${APP_HOME}/build/* ${FB_HOME}/public/ && firebase deploy --only hosting && cd ${DEV_HOME}"
+
 
 cd ${DEV_HOME}
 export OLDPWD=${OLDPWD_BK}
